--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
@@ -6,10 +7,30 @@
     </head>
     <body>
         <h1>Blog</h1>
+        <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}"
+              media="screen">
+
         {% for p in post_list %}
-            <h3><a href="{{ p.get_absolute_url }}"> {{ p.title }}</a></h3>
-            <h4>{{ p.created_at }}</h4>
-            <p>{{ p.content }}</p>
+        <div class = "card mb-4">
+           <a href="{{ p.get_absolute_url }}"><img class="card-img-top" src = "http://placehold.it/750x300"
+                   alt="..."/></a>
+            <div class="card-body">
+                <div class="small text-muted">Posted on
+                    {{ p.created_at }} by
+                <a href="#">작성자명 쓸 위치</a>
+                </div>
+                <h2 class="card-title h4">{{ p.title }}</h2>
+                <p class="card-text">{{ p.content }}</p>
+                <a class="btn btn-primary" href="{{ p.get_absolute_url}}">Read More &rarr;</a>
+            </div>
+        </div>
+        
+            <div class="card-footer text-muted">
+                Posted on {{ p.created_at }} by
+                <a href="#">작성자명 쓸 위치</a>
+            </div>
+
+
         <hr/>
         {% endfor %}
     </body>
