--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,19 +11,19 @@
               media="screen">
 
         {% for p in post_list %}
-        <div class = "card mb-4">
-           <a href="{{ p.get_absolute_url }}"><img class="card-img-top" src = "http://placehold.it/750x300"
-                   alt="..."/></a>
-            <div class="card-body">
-                <div class="small text-muted">Posted on
-                    {{ p.created_at }} by
-                <a href="#">작성자명 쓸 위치</a>
+            <div class = "card mb-4">
+               <a href="{{ p.get_absolute_url }}"><img class="card-img-top" src = "{{ p.head_image.url }}"
+                       alt="..."/></a>
+                <div class="card-body">
+                    <div class="small text-muted">Posted on
+                        {{ p.created_at }} by
+                    <a href="#">작성자명 쓸 위치</a>
+                    </div>
+                    <h2 class="card-title h4">{{ p.title }}</h2>
+                    <p class="card-text">{{ p.content }}</p>
+                    <a class="btn btn-primary" href="{{ p.get_absolute_url}}">Read More &rarr;</a>
                 </div>
-                <h2 class="card-title h4">{{ p.title }}</h2>
-                <p class="card-text">{{ p.content }}</p>
-                <a class="btn btn-primary" href="{{ p.get_absolute_url}}">Read More &rarr;</a>
             </div>
-        </div>
 
             <div class="card-footer text-muted">
                 Posted on {{ p.created_at }} by
