--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,14 +12,21 @@
 
         {% for p in post_list %}
             <div class = "card mb-4">
+                {% if p.head_image %}
                <a href="{{ p.get_absolute_url }}"><img class="card-img-top" src = "{{ p.head_image.url }}"
-                       alt="..."/></a>
+                       alt="{{ p }} head image"/></a>
+
+                {% else %}
+                <a href="{{ p.get_absolute_url }}">
+                    <img class="card-img-top" src = "http://picsum.photos/seed/{{ p.id }}/800.200"
+                       alt="{{ p }} head image"/></a>
+                {% endif %}
                 <div class="card-body">
+                    <h2 class="card-title h4">{{ p.title }}</h2>
                     <div class="small text-muted">Posted on
                         {{ p.created_at }} by
                     <a href="#">작성자명 쓸 위치</a>
                     </div>
-                    <h2 class="card-title h4">{{ p.title }}</h2>
                     <p class="card-text">{{ p.content }}</p>
                     <a class="btn btn-primary" href="{{ p.get_absolute_url}}">Read More &rarr;</a>
                 </div>
