--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -63,7 +63,24 @@
                             <p>
                                 {{ post.content }}
                             </p>
+                            {% if post.file_upload %}
+                            <a href="{{ post.file_upload.url }}"
+                               type="button" class="btn btn-outline-secondary"
+                               role="button" download>
+                                Download:
+                                {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                                <i class="fa-solid fa-file-excel"></i>
+                                {% if post.get_file_ext == 'csv' %}
+                                <i class="fa-solid fa-file-csv"></i>
+                                {% if post.get_file_ext == 'doc' or post.get_file_ext == 'docx' %}
+                                <i class="fa-solid fa-file-word"></i>
+                                {% else %}
+                                <i class="fa-solid fa-file"></i>
+                                {% endif %}
 
+                                {{ post.get_file_name }}
+                            </a>
+                            {% endif %}
                         </section>
                     </article>
                     <!-- Comments section-->
