--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -23,11 +23,15 @@
                 {% endif %}
                 <div class="card-body">
                     <h2 class="card-title h4">{{ p.title }}</h2>
+                    {% if p.hook_text %}
+                        <h6 class="text-muted h4">{{ p.hook_text }}</h6>
+                    {% endif %}
                     <div class="small text-muted">Posted on
+                        </hr>
                         {{ p.created_at }} by
                     <a href="#">작성자명 쓸 위치</a>
                     </div>
-                    <p class="card-text">{{ p.content }}</p>
+                    <p class="card-text">{{ p.content | truncatewords:45 }}</p>
                     <a class="btn btn-primary" href="{{ p.get_absolute_url}}">Read More &rarr;</a>
                 </div>
             </div>
